# WinAPIClient

./: LICENSE  README.md  setup.cfg
src/: pyqt_overlay_boilerplate.py  qt_app_test.py
src/winapiclient/: __init__.py  winapiclient.py
