[metadata]
name = WinAPIClient
version = 0.0.1
author = Thomas Selvig
description = High-level wrapper around pywin32 for developing windows overlays
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows :: Windows 10

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src